--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-_04_results\*
-_90_dependencies\*
-_99_tmp\*
-_98_jupyter_notebook\*
-_01_data\*
+_04_results*
+_90_dependencies*
+_99_tmp*
+_98_jupyter_notebook*
+_01_data*
